Bump minimal required Maven version from 3.2.3 to 3.2.5 (#313)